get all div center

--- a/game.html
+++ b/game.html
@@ -4,22 +4,15 @@
 <head>
      <meta charset="UTF-8">
      <meta name="viewport" contact="width=device-width, initial-scale=1.0">
-     <meta name="descriptoin" content="Pass the Time">
+     <meta name="description" content="Pass the Time">
      <meta name="keywords" content="problem solving">
-
      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,300&display=swap">
-
      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
      <link rel="stylesheet" href="assets/css/style.css">
-
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous">
-
      <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
-
      <title> Mini Games| Dish-Tac-Toe</title>
-
  </head>
  
 <!--- Header --->
@@ -33,17 +26,17 @@
                     <i class="fas fa-dice"></i>
                 </a>
                 <a class="navbar-brand" href="index.html"></a>      
-<!--- Button is form Boostrap --->
+                        <!--- Button is form Boostrap --->
                         <button class="navbar-toggler hvr-grow" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigetion" inlign="text-right">
                         <span class="navbar-toggler-icon"><span>                
                         </button>
-                <div class="collapse navbar-collapse" id="navbarNav"> 
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 text-inline">
+                        <div class="collapse navbar-collapse" id="navbarNav"> 
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0 text-inline">
                         <li class="nav-link">
-                            <a class="nav-link active" href="game.html">Game</a>
+                        <a class="nav-link active" href="game.html">Game</a>
                         </li>
                         <li class="nav-link">
-                            <a class="nav-link active" href="contact.html">Contact</a>
+                        <a class="nav-link active" href="contact.html">Contact</a>
                         </li>
                     </ul> 
                 </div>
@@ -51,13 +44,13 @@
         </nav>
 </header>
 <!----  About us box. --->
-
+<!---
 <section>
     <div id="rules-modal" class="modal hide">
         <div class="rules-mdal-content">
             <span class="close">&times;</span>
                 <h4 class="text-center">About US</h4>
-                    <ul claas="rules-list">
+                    <ul class="rules-list">
                         <li>
                         <p>
                         We are a small design company that loves old school games, we're trying to bring a twist back to the 20th century.
@@ -76,26 +69,23 @@
             </ul>            
         </div>
     </div>
-</section>
+</section> -->
 
 <!--- Body ---->
-<section>
- <div class="container">  
-        <button type="button" class="btn btn-primary" href="game.html" id="start" >Start</button> 
-        </div>
-         <h3> <b>Steps :</b></h3>
-    <ul>
-        <li>To Start playing click the "Start" button</li>
-        <small>If you with like to Restart the game click on "Play Again"<small>
-    </ul>
-<div class="container-fluid">
-    <div class="row align-items-center">
-        <div class="col-4 align-self-center text-center">
-        <i class="fas fa-times turn-icon high player-icon" id="x"></i>
-        <h3>Turn</h3>
-    </div>
-</div>
-<div class="col-sm-12 col-md-4">
+<section class="container-fluid text-center main-container">
+<br>    
+         <h1 class="title"> <b>Steps :</b></h1>
+            <br>
+            <h6 class="title">
+                To Start playing click the "Start" button
+                you with like to Restart the game click on "Play Again".
+            </h6>
+            <br>
+            <div class="container align-items-center">  
+                <button type="button" class="btn btn-primary" href="game.html" id="start">Start</button> 
+            </div>
+            <br>
+    <div class="col-sm-12 col-md-12">
     <div class="board">
         <div class="box-row">
             <div class="box" id="box1"></div>
@@ -115,23 +105,29 @@
         <div class="clear"></div>
     </div>
 
+    <div class="container-fluid">
+        <div class="row align-items-center">
+            <div class="col-4 align-self-center text-center">
+            <i class="fas fa-circle turn-icon high player-icon" id="x"></i>
+            <h3>Turn</h3>
+        </div>
     <div class="col-sm-12 col-md-4 align-self-center text-center">
         <i class="far fa-times turn-icon player-icon" id="circle"></i>
-        <h3>Turn</h3>
     </div>
     <div id="turn"></div>
-    <section class="score">
-        <div class="x-score">O : <span id="x_wins">X</span></div>
-        <div>SCORE</div>
-        <div class="o-score">X : <span id="o_wins">0</span></div>
+            <section class="score">
+                <div>SCORE</div>
+                <div class="x-score">Player O : <span id="x_wins">0</span></div>
+                <div class="o-score">Player X : <span id="o_wins">0</span></div>
+            </section>
+            <section class="pop-up align-items-center" id="click">
+                <p>TIE!</p>
+                <button type="button" class="btn btn-warning">Play again</button>
+                
+            </section>
+        </div>
     </div>
 </section>
-
-<section class="pop-up" id="click">
-    <p>TIE!</p>
-    <button type="button" class="btn btn-warning">Play again</button>
-</section>
-
 
 <!--- Footer --->
 <footer>
