--- a/game.html
+++ b/game.html
@@ -42,7 +42,8 @@
                 </div>
             </div>
         </nav>
-</header>
+ </header>
+
 <!----  About us box. --->
 <!---
 <section>
@@ -74,12 +75,12 @@
 <!--- Body ---->
 <section class="container-fluid text-center main-container">
 <br>    
-         <h1 class="title"> <b>Steps :</b></h1>
+         <h1 class="title"> <b>Steps</b></h1>
             <br>
-            <h6 class="title">
-                To Start playing click the "Start" button
-                you with like to Restart the game click on "Play Again".
-            </h6>
+            <h2 class="title">
+                To Start playing click the "Start" button,
+                if you with like to Restart the game click on "Play Again".
+            </h2>
             <br>
             <div class="container align-items-center">  
                 <button type="button" class="btn btn-primary" href="game.html" id="start">Start</button> 
@@ -105,8 +106,8 @@
         <div class="clear"></div>
     </div>
 
-    <div class="container-fluid">
-        <div class="row align-items-center">
+    <div class="container-fluid align-items-center">
+        <div class="row">
             <div class="col-4 align-self-center text-center">
             <i class="fas fa-circle turn-icon high player-icon" id="x"></i>
             <h3>Turn</h3>
@@ -114,6 +115,7 @@
     <div class="col-sm-12 col-md-4 align-self-center text-center">
         <i class="far fa-times turn-icon player-icon" id="circle"></i>
     </div>
+    
     <div id="turn"></div>
             <section class="score">
                 <div>SCORE</div>
@@ -123,7 +125,6 @@
             <section class="pop-up align-items-center" id="click">
                 <p>TIE!</p>
                 <button type="button" class="btn btn-warning">Play again</button>
-                
             </section>
         </div>
     </div>
