--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@
 
 <section class="container" >
     <h2 class="contact-header">How can We Help!</h2>
-        <form onsubmit="return sendMail(this);">
+        <form onsubmit="sendMail(this);">
 
             <input type="text" class="form-control" id="fullname" placeholder="Name:" name="name" required/>
 
@@ -79,7 +79,7 @@
     <div class="container text-center main-container">
         <div class="row">
         <div class="col-12"> 
-         <img class="img-fluid" src="assets/image/topwin/topwins.png"  alt="controller">
+         <img src="assets/image/topwin/topwins.png"  alt="controller" width="500" height="333">
         </div>
       </div>
     </div>
