--- a/contact.html
+++ b/contact.html
@@ -3,15 +3,14 @@
 
 <head>
        <meta charset="UTF-8">
-       <meta name="viewport" contact="width=device-width, initial-scale=1.0">
-       <meta name="description" content="Pass the Time">
+       <meta name="viewport" content="device-width, initial-scale=1" />
+       <meta name="description" content="Pass the Time" />
        <meta name="keywords" content="problem solving">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,300&display=swap">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <link rel="stylesheet" href="assets/css/style.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous">
-        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,300&display=swap" />
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+        <link rel="stylesheet" href="assets/css/style.css" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
 
         <title> Mini Games| Dish-Tac-Toe</title>
  </head>
@@ -25,11 +24,12 @@
               <h2 id="logo">Dish-Tac-Toe</h2>
                   <i class="fas fa-dice"></i></a>
                     <a class="navbar-brand" href="index.html"></a>
-                        <button class="navbar-toggler hvr-grow" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigetion">
+                        <button class="navbar-toggler hvr-grow" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavResponsive" aria-controls="navbarNav"
+                        aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>                
                         </button>
                              <div class="collapse navbar-collapse" id="navbarNav"> 
-                                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 text-inline">
+                                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                              <li class="nav-link">
                  <a class="nav-link active" href="game.html">Game</a>
                          </li>
@@ -38,30 +38,29 @@
              </li>
          </ul> 
      </div>
+    </div>
   </nav>
 </header>
-<!---  About us box. --->
 
 <section class="container text-center main-container">
     <div id="rules-modal">
          <div class="rules-mdal-content">
             <span class="close">&times;</span>
-                <!-- <h4 class="text-center"></h4>. -->
+                    <h6 class="title"> Please fill in, below.</h6>
                     <ul class="rules-list">
-                    <h3 class="title">
-                    <br>
+                    <li>
                     <p> We are a small design company that loves old school games, we're trying to bring a twist back to the 20th century.
                     </p>
                     <br>
                     <p>Tic tac toe is by no means an unfamiliar game we're trying to help couples and siblings settle arguments about their chores & have some fun while it's been accomplish.
                     </p>
-                    </h3>
+                    </li>
+                
             </ul>            
         </div>
     </div>
     <br>
 </section>
-<!--- Contact us box --->
 
 <section class="container" >
     <h2 class="contact-header">How can We Help!</h2>
@@ -83,7 +82,6 @@
         </div>
       </div>
     </div>
-<!--- Footer --->
 
     <footer>
         <div>
