--- a/index.html
+++ b/index.html
@@ -1,27 +1,25 @@
 <!DOCTYPE html>
-<html land="en">
+<html lang="en">
 
 <head>
-     <meta charset="UTF-8">
-     <meta name="viewport" contact="width=device-width, initial-scale=1.0">
-     <meta name="description" content="Pass the Time">
-     <meta name="keywords" content="problem solving">
+     <meta charset="UTF-8" />
+     <meta name="viewport" content="width=device-width initial-scale=1" />
+     <meta name="description" content="Pass the Time" />
+     <meta name="keywords" content="problem solving" />
      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,300&display=swap">
-     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-     <link rel="stylesheet" href="assets/css/style.css">
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous">
-     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
-
+     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,300&display=swap" />
+     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+     <link rel="stylesheet" href="assets/css/style.css" />
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
+     
      <title>Dish-Tac-Toe</title> 
-    <link rel="shortcut icon" type="image/png" href="./image/landing.png">
+    <link rel="shortcut icon" type="image/png" href="./image/landing.png" />
 </head>
- 
-<!--- Header --->
+
 <body>   
     
 <header>
-<!---  Navbar --->
+
 <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
     <div class="container-fluid"> 
         <a href="index.html">
@@ -29,12 +27,11 @@
                 <i class="fas fa-dice"></i></a>
                      <a class="navbar-brand" href="index.html">
                          </a>
-                    <!---  Button is form Boostrap --->
-                    <button class="navbar-toggler hvr-grow" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigetion" inlign="text-right">
-                    <span class="navbar-toggler-icon"><span>                
+                    <button class="navbar-toggler hvr-grow" type="button" data-bs-toggle="collapse navbar-collapse" data-bs-target="#navbarNavResponsive"  aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>       
                     </button>
-                    <div class="collapse navbar-collapse" id="navbarNav"> 
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 text-inline">
+                    <!--<div class="collapse navbar-collapse" id="navbarNav"> -->
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-link">
                     <a class="nav-link active" href="game.html">Game</a>
                     </li>
@@ -43,11 +40,10 @@
                     </li>
                 </ul> 
             </div>
-        </div>
     </nav>
 </header>
 <br>
-<!--- Body --->
+
 <section class="container text-center main-container">
     <div class="row">
         <div class="col-12">
@@ -62,15 +58,12 @@
                         kickback and relax let's have some fun.
                     </h6>
                     <br>
-                    <a class="btn btn-primary" type="button" href="game.html">Play</a>
-                    <a class="btn btn-primary" type="button" href="contact.html">Contact</a>
+                    <a class="btn btn-primary"  href="game.html">Play</a>
+                    <a class="btn btn-primary"  href="contact.html">Contact</a>
                 </div>   
             </div>
-        </div>
-    </div>
- </div>   
+        </div>   
 </section>
-<!---- Footer ---->
 
 <footer>
     <div>
