--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
               <h2 id="logo">Dish-Tac-Toe</h2>
                   <i class="fas fa-dice"></i></a>
                     <a class="navbar-brand" href="index.html"></a>
-                        <button class="navbar-toggler hvr-grow" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavResponsive" aria-controls="navbarNav"
+                        <button class="navbar-toggler hvr-grow" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>                
                         </button>
