--- a/game.html
+++ b/game.html
@@ -25,7 +25,7 @@
                     <i class="fas fa-dice"></i>
                 </a>
                 <a class="navbar-brand" href="index.html"></a>      
-                        <button class="navbar-toggler hvr-grow" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavResponsive" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" >
+                        <button class="navbar-toggler hvr-grow" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" >
                         <span class="navbar-toggler-icon"></span>               
                         </button>
                         <div class="collapse navbar-collapse" id="navbarNav"> 
@@ -44,7 +44,7 @@
 
 <section class="container-fluid text-center main-container">
 <br>    
-         <h1 class="title"> <b>Steps</b></h1>
+         <h6 class="title"> <b>Steps</b></h6>
             <br>
             <h2 class="title">
                 To Start playing click the "Start" button.
@@ -85,7 +85,6 @@
     <div class="col-sm-12 col-md-4">
         <i class="far fa-times turn-icon player-icon" id="circle"></i>
     </div>
-
     <div id="turn"></div>
         <div class="WinCount">
             <section class="score">
@@ -93,7 +92,7 @@
                 <div class="x-score">Player X : <span id="x_wins">0</span></div>
                 <div class="o-score">Player O : <span id="o_wins">0</span></div>
             </section>
-        </div>
+           </div>
         </div>
     </div>
 </section>
