--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <i class="fas fa-dice"></i></a>
                      <a class="navbar-brand" href="index.html">
                          </a>
-                    <button class="navbar-toggler hvr-grow" type="button" data-bs-toggle="collapse navbar-collapse" data-bs-target="#navbarNavResponsive"  aria-expanded="false" aria-label="Toggle navigation">
+                    <button class="navbar-toggler hvr-grow" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"  aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>       
                     </button>
                     <!--<div class="collapse navbar-collapse" id="navbarNav"> -->
