--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <button class="navbar-toggler hvr-grow" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"  aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>       
                     </button>
-                    <!--<div class="collapse navbar-collapse" id="navbarNav"> -->
+                    <div class="collapse navbar-collapse" id="navbarNav"> 
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-link">
                     <a class="nav-link active" href="game.html">Game</a>
