--- a/game.html
+++ b/game.html
@@ -43,20 +43,20 @@
  </header>
 
 <section class="container-fluid text-center main-container">
-<br>    
-         <h6 class="title"> <b>Steps</b></h6>
+    <br
+     <h6 class="title"> <b>Steps</b></h6>
             <br>
             <h2 class="title">
                 To Start playing click the "Start" button.
             </h2>
-            <br>
+            
             <div class="container align-items-center">  
                 <button type="button" class="btn btn-primary" id="start">Start</button> 
                 <div class="clear"></div>
             </div>
-            <br>
-    <div class="col-sm-12 col-md-12">
-    <div class="board">
+           
+    <div class="container-fluid col-md-12 align-self-center text-center">
+    <div class="board align-self-center">
         <div class="box-row">
             <div class="box" id="box1"></div>
             <div class="box" id="box2"></div>
@@ -74,9 +74,9 @@
         </div>
         <div class="clear"></div>
 
-        <div class="container-fluid align-items-center">
+       <div class="container-fluid align-items-center">
             <div class="row">
-                <div class="col-4 align-self-center text-center">
+                <div class="col-12 align-self-center text-center">
                 <i class="fas fa-circle turn-icon high player-icon" id="x"></i>
                 <h3>Turn</h3>
             </div>
