added animation icon

--- a/index.html
+++ b/index.html
@@ -66,16 +66,16 @@
 </section>
 
 <footer>
-    <div>
-        <ul class="social-networks">
-               <li>
-                <a href="https://www.facebook.com/" target="_blank" rel="noopener"><i class="fab fa-facebook-square"></i></a>
+    <div class="icons-wrapper">
+        <ul class="social-networks ">
+               <li><!---fab fa-facebook-square -->
+                <a href="https://www.facebook.com/" target="_blank" rel="noopener"><i class="ri-facebook-circle-line icon"></i></a>
                 </li>
-                <li>
-                <a href="https://www.youtube.com/" target="_blank" rel="noopener"><i class="fab fa-youtube-square"></i></a>
+                <li><!--fab fa-youtube-square-->
+                <a href="https://www.whatsapp.com/" target="_blank" rel="noopener"><i class="ri-whatsapp-line icon"></i></a>
                 </li>
-                <li>
-               <a href="https://www.instagram.com/" target="_blank" rel="noopener"><i class="fab fa-instagram"></i></a>
+                <li><!--fab fa-instagram-->
+               <a href="https://www.instagram.com/" target="_blank" rel="noopener"><i class="ri-instagram-line icon"></i></a>
                 </li> 
         </ul>
     </div>
