update to readyMe and JS

--- a/game.html
+++ b/game.html
@@ -42,20 +42,20 @@
         </nav>
  </header>
 
-<section class="container-fluid text-center main-container">
+<section class="text-center main-container">
     <br
      <h6 class="title"> <b>Steps</b></h6>
             <br>
             <h2 class="title">
-                To Start playing click the "Start" button.
+                To Start playing the click a in box and the game will begin automatically if you wanna start over click Reset.
             </h2>
             
             <div class="container align-items-center">  
-                <button type="button" class="btn btn-primary" id="start">Start</button> 
+                <button type="button" class="btn btn-primary" id="start">Reset!</button> 
                 <div class="clear"></div>
             </div>
            
-    <div class="container-fluid col-md-12 align-self-center text-center">
+    <div class="align-self-center text-center">
     <div class="board align-self-center">
         <div class="box-row">
             <div class="box" id="box1"></div>
