who's turn updated

--- a/game.html
+++ b/game.html
@@ -89,8 +89,8 @@
         <div class="WinCount">
             <section class="score">
                 <h4>SCORE</h4>
-                <div class="x-score">Player X : <span id="x_wins">0</span></div>
-                <div class="o-score">Player O : <span id="o_wins">0</span></div>
+                <div class="x-score">Player O : <span id="x_wins">0</span></div>
+                <div class="o-score">Player X : <span id="o_wins">0</span></div>
             </section>
            </div>
         </div>
