--- a/game.html
+++ b/game.html
@@ -44,18 +44,20 @@
 
 <section class="text-center main-container">
     <br
-     <h6 class="title"> <b>Steps</b></h6>
+     <h6 class="title">
+        <b>Steps</b>
+    </h6>
             <br>
             <h2 class="title">
                 To Start playing the click a in box and the game will begin automatically if you wanna start over click Reset.
             </h2>
             
-            <div class="container align-items-center">  
+            <div class="container-fluid align-items-center">  
                 <button type="button" class="btn btn-primary" id="start">Reset!</button> 
                 <div class="clear"></div>
             </div>
            
-    <div class="align-self-center text-center">
+    <div class="container-fluid align-self-center text-center">
     <div class="board align-self-center">
         <div class="box-row">
             <div class="box" id="box1"></div>
